--- a/views/style/styles.ejs
+++ b/views/style/styles.ejs
@@ -79,10 +79,14 @@
     height: 100vh;
     top: 0;
     width: 220px;
+    z-index: 9;
   }
   .main-content {
     width: calc(100% - 220px);
     margin-left: auto;
+  }
+  .open-btn {
+    text-align: center;
   }
   .sidebar-ul {
     padding: 0 16px;
