refactored : change the lot size 15 instead of 25

--- a/views/MarketOrderInformation.ejs
+++ b/views/MarketOrderInformation.ejs
@@ -87,6 +87,7 @@
     src="https://MomentJS.com/downloads/moment.js"
   ></script>
   <script>
+     let lotSize = '<%= lotSize %>';
     const getOrdermarketprice = (type) => {
       // this.setAttribute("disabled");
       window.location.href = `getOrdermarketprice/${type}`;
@@ -165,13 +166,13 @@
                   item.call_put +
                   " " +
                   "Q" +
-                  item.quantity / 25
+                  item.quantity / lotSize
                 : "Sell" +
                   item.strikeCurrent +
                   " " +
                   item.call_put +
                   "Q" +
-                  item.quantity / 25 +
+                  item.quantity / lotSize +
                   " ";
             let qtySher = item.strike_price + item.call_put;
             spanQut.innerHTML = " " + "(" + qtySher + ")";
@@ -256,13 +257,13 @@
                   item.call_put +
                   " " +
                   "Q" +
-                  item.quantity / 25
+                  item.quantity / lotSize
                 : "Sell" +
                   item.strikeCurrent +
                   " " +
                   item.call_put +
                   "Q" +
-                  item.quantity / 25 +
+                  item.quantity / lotSize +
                   " ";
             let qtySher = item.strike_price + item.call_put;
             spanQut.innerHTML = " " + "(" + qtySher + ")";
@@ -649,19 +650,19 @@
         ].join(":");
 
         document.getElementById("pnlq").innerText = isNaN(
-          ((totalprofitCount + totalprofitCount1) * 25).toFixed(2)
+          ((totalprofitCount + totalprofitCount1) * lotSize).toFixed(2)
         )
           ? "0.00"
           : isNaN(
               (
-                (totalprofitCount / qtyS1) * 25 +
-                (totalprofitCount1 / qtyS2) * 25
+                (totalprofitCount / qtyS1) * lotSize +
+                (totalprofitCount1 / qtyS2) * lotSize
               ).toFixed(2)
             )
           ? "0.00"
           : (
-              (totalprofitCount / qtyS1) * 25 +
-              (totalprofitCount1 / qtyS2) * 25
+              (totalprofitCount / qtyS1) * lotSize +
+              (totalprofitCount1 / qtyS2) * lotSize
             ).toFixed(2);
 
         document.getElementById("pnl-over").innerText = isNaN(
