--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,15 @@
-<%- contentFor('body') %>
-
-<div class="w-50 mx-auto my-5">
-  <div class="card shadow">
-    <div class="card-body text-center">
-      <a
-        href="https://kite.zerodha.com/connect/login?api_key=7e3avcnhbilr5319&redirect_params=MarketOrder"
-        class="btn btn-outline-danger"
-        >Login With Kite</a
-      >
+<body>
+  <div class="w-50 mx-auto my-5">
+    <div class="card shadow">
+      <div class="card-body text-center">
+        <a id="login" class="btn btn-outline-danger">Login With Kite</a>
+      </div>
     </div>
   </div>
-</div>
+
+  <script>
+    let apiKey = '<%= API_KEY %>';
+    let a = document.getElementById("login")
+    a.setAttribute("href", `https://kite.zerodha.com/connect/login?api_key=${apiKey}&redirect_params=MarketOrder`);
+  </script>
+</body>
